css/main.css
/* ... */
.choose-role__label:hover {
    background: #48242f;
}

.choose-role__individual > span {
    align-self: flex-end;
    bottom: 28px;
    left: 1px;
}

.choose-role__entity > span {
    top: 28px;
}

.footer-component-choose-page__wrapper{
    display: flex;
    flex:1;
    flex-direction: row;
}

.choose-page__footer-second-wrapper {
    justify-content: flex-end;
    padding-bottom: 20px;
}

@media (max-width: 766px) {
    .choose-role__wrapper {
        flex-direction: column;
        height: 1228px;
        display: contents;
    }

    .choose-role__button {
        width: calc(100% - 10px);
        min-height: 600px;
        margin-top: 10px;
    }
}



/*styles for entity.html*/
.entity-page__wrapper{
    display: flex;
    flex-direction: column;
    min-width: 415px;
}

.entity-page__navigation{
    padding: 10px;
}

.entity-page__footer-column {
    flex-grow: initial;

}

.entity-page__navigation__link{
    font-family: Gabriola, sans-serif;
    font-size: 20px;
    color: #915570;
}

.entity-page__page-name__wrapper{
    display: flex;
    justify-content: center;
}

.entity-page__page-name{
    font-family: Gabriola, sans-serif;
    font-size: 40px;
    color: #915570;
    padding: 0 10%;
    justify-content: left;
}

.entity-page__description__wrapper{
    display: flex;
    justify-content: center;
    width: 100%;
    padding: 0 10%;
}

.entity-page__tables__wrapper{
    padding: 10px 5%;
    min-height: calc(100vh - 470px);
}

.entity-page__table__wrapper{
    display: grid;
    grid-template-columns: 330px calc(100% - 330px);
    grid-template-rows: auto;
    justify-content: flex-end;
    align-items: flex-start;
}

.entity-page__not-last-element{
}

.tables__table-button{
    grid-column: 1/2;
    grid-row: 1/3;
    margin-right: 10px;
    border: 8px solid transparent;
    transition: border .5s;
    max-width: 330px;
}

.table__image-content{
    height: 100%;
    width: 100%;
}

.tables__table-button:hover {
    border: 0 solid transparent;
}

.btn-primary:after{
    background: none;
}

.tables__table__details-wrapper{
    grid-column: 2/3;
    grid-row: 2/3;
    display: flex;
    flex-direction: column;
}

.table-details__name {
    grid-column: 2/3;
    grid-row: 1/2;
    align-self: flex-end;
}

.table-details__divider{
    width: 100%;
    margin: 3px 0;
}

.tables__divider{
    height: 2px;
    background-color: #915570;
}

@media (max-width: 766px) {
    .tables__divider{
        margin: 10px 0 50px 0;
    }
}

.table-details__description{
    margin-bottom: 2px;
}

.modal-component__opened {
    background: transparent;
    min-width: 70%;
}



.modal-header__custom{
    position: relative;
    border-bottom: none;
    padding: 0;
    background: transparent;
}

.modal-header__custom > img {
    max-height: 100%;
    max-width: 100%;
}

.modal-header__custom > .close {
    position: absolute;
    top: 10px;
    right: 10px;
}

.fade{
    background-color: rgba(0,0,0,0.4);
}

.modal-open {
    overflow-y: auto !important;
}

.footer-component__content-wrapper{
    width: 100%;
    display: flex;
    justify-content: center;
}

@media (max-width: 766px) {
    .entity-page__table__wrapper {
        grid-template-columns: 100%;
        grid-template-rows: 50px auto auto;
    }

    .tables__table-button {
        grid-column: 1/2;
        grid-row: 2/3;
        max-width: 100%;
    }

    .table-details__name {
        grid-column: 1/2;
        grid-row: 1/2;
        justify-self: center;
        align-self: flex-end;
        font-family: Gabriola, sans-serif;
        font-size: 30px;
        color: #915570;
        font-weight: bold;
    }


    .tables__table__details-wrapper {
        grid-column: 1/2;
        grid-row: 3/4;
    }
}


/*styles for footer on index.html*/
.choose-role__footer{
    display: flex;
    flex-direction: row !important;
}

.choose-user-role__element {
    flex-grow: inherit;
}

.footer-component-choose-page{
    display: flex;
    justify-self: flex-end;
    flex-direction: row;
    justify-content: center;
    padding: 0 30px;
}

.choose-page__footer__info{
    margin: 0;
}
/* ... */

